--- a/VDMS/Views/Documents/Index.cshtml
+++ b/VDMS/Views/Documents/Index.cshtml
@@ -204,6 +204,12 @@
         });
 
 
+        $(function () {
+            $("#comboboxUser").combobox();
+            $("#toggle").click(function () {
+                $("#comboboxUser").toggle();
+            });
+        });
     </script>
 
 </head>
@@ -252,7 +258,7 @@
                 <div class="form-group col-md-5">
                     @Html.Label("Created by", htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
-                        @Html.DropDownList("UserID", null, "Select Creator", htmlAttributes: new { @class = "form-control" })
+                        @Html.DropDownList("UserID", null, "Select Creator", htmlAttributes: new { @class = "form-control" , id = "comboboxUser" })
                     </div>
                 </div>
 
