--- a/VDMS/Views/Shared/_Layout.cshtml
+++ b/VDMS/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
     <!-- Required jQuery and jQuery UI Javascript references -->
     <script src="@Url.Content("~/Scripts/jquery-1.10.2.min.js")"></script>
     <script src="@Url.Content("~/Scripts/jquery-ui-1.11.4.min.js")"></script>
-
+    <script src="@Url.Content("~/Scripts/jquery.expander.js")"></script>
 
 
 </head>
