Fixed style of the filtering buttons.

--- a/VDMS/Views/UsersAdmin/Details.cshtml
+++ b/VDMS/Views/UsersAdmin/Details.cshtml
@@ -22,7 +22,10 @@
            @ViewBag.RoleName
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.Disabled)
+            @Html.
+            
+            
+            NameFor(model => model.Disabled)
         </dt>
         <dd>
             @Html.CheckBoxFor(model => model.Disabled, new { disabled = "disabled" })
