--- a/VDMS/Content/Site.css
+++ b/VDMS/Content/Site.css
@@ -189,6 +189,35 @@ tr:nth-of-type(even) {
     padding: 0.3em;
 }
 
+.read-more a {
+	margin-top:10px;
+}
+.arrow-right { 
+	width: 0;
+	height: 0;
+	border-style: solid;
+	border-width: 23px 0 23px 39.8px;
+	border-color: transparent transparent transparent #e60000;
+	font-size: 0;
+    line-height: 0;
+    float:left;	
+    margin-top: -16px;
+    margin-right: 10px;
+}
+
+.arrow-left { 
+	width: 0;
+	height: 0;
+	border-style: solid;
+	border-width: 23px 39.8px 23px 0;
+	border-color: transparent #e60000 transparent transparent;
+	font-size: 0;
+    line-height: 0;
+    float:left;
+    margin-top: -16px;
+    margin-right: 10px;
+}
+
 @media screen and (max-width: 497px) {
     .vdf-brand-text{
     	font-size:19px;
