Revert "Fixed style of the filtering buttons."
This reverts commit 63aad8f5fe6b05cf22d2c9de3fa04b0a0ccd2f58.

--- a/VDMS/Views/UsersAdmin/Details.cshtml
+++ b/VDMS/Views/UsersAdmin/Details.cshtml
@@ -22,10 +22,7 @@
            @ViewBag.RoleName
         </dd>
         <dt>
-            @Html.
-            
-            
-            NameFor(model => model.Disabled)
+            @Html.DisplayNameFor(model => model.Disabled)
         </dt>
         <dd>
             @Html.CheckBoxFor(model => model.Disabled, new { disabled = "disabled" })
