Changed Create New hyperlink with Buttons.

--- a/VDMS/Views/DocumentTypes/Index.cshtml
+++ b/VDMS/Views/DocumentTypes/Index.cshtml
@@ -7,7 +7,7 @@
 <h2>Document Types</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Add new document type", "Create",  null, new { @class="btn btn-default" })
 </p>
 
 <body>
