--- a/VDMS/Views/Branches/Index.cshtml
+++ b/VDMS/Views/Branches/Index.cshtml
@@ -7,7 +7,7 @@
 <h2>Branches</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Add new branch", "Create", null, new { @class="btn btn-default" })
 </p>
 
 <body>
