--- a/VDMS/Views/UsersAdmin/Index.cshtml
+++ b/VDMS/Views/UsersAdmin/Index.cshtml
@@ -7,7 +7,7 @@
 <h2>Users</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Add new user", "Create",  null, new { @class="btn btn-default" })
 </p>
 
 <body>
