--- a/VDMS/Views/Documents/Index.cshtml
+++ b/VDMS/Views/Documents/Index.cshtml
@@ -124,6 +124,8 @@
                         <input type="submit" name="submit" value="Preview" class="btn btn-default" />
                         &nbsp;  &nbsp;
                         <input type="submit" name="submit" value="Export" class="btn btn-default" />
+                        &nbsp;  &nbsp;
+                        <input type="submit" name="submit" value="Clear filters" class="btn btn-default" />
                     </div>
                 </div>
 
